don't forget the dependency tree during OOXML import, fdo#58863

Change-Id: I8863faddd1bca0b55764d09c4ef9f959264b53ae